--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Thu May 01 01:17:30 UTC 2025
+#Thu May 01 02:13:04 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -26,7 +26,7 @@ level-name=world
 level-seed=
 level-type=minecraft\:normal
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=10
 max-tick-time=60000
 max-world-size=29999984
 motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
@@ -54,5 +54,5 @@ spawn-protection=16
 sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
-view-distance=10
+view-distance=14
 white-list=false
